# MetaMacroMachine

./: .gdbinit  Cargo.toml  eval-notes.txt
src/: main.rs
src/parse/: mod.rs  sym.rs
src/primitives/: element.rs  minst.rs  mod.rs  new.rs
